--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </a>
             <ul class="menu">
                 <li class="menu__item">
-                    <a class="menu__link" href="index.html">Inicio</a>
+                    <a class="menu__link active" href="index.html">Inicio</a>
                 </li>
                 <li class="menu__item">
                     <a class="menu__link" href="equipos.html">Equipos</a>
@@ -35,42 +35,52 @@
     </header>
     <main class="container">
         <section class="row">
-            <img class="col margen" src="./img/foto1.jpg" alt="foto1">
+            <img class="col margen escudos" src="./img/foto1.jpg" alt="foto1">
             <div class="col margen">  
                 <h1>
                 Resumen de la fecha número 22 del campeonato argentino
                 </h1>
                 <p>
-                En una nueva fecha, los equipos se mostraron con la misma forma y respetaron el andar del campeonato Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab natus, dolorum neque quibusdam, enim incidunt dolore esse veniam officia alias iusto ipsum amet corrupti voluptates veritatis dolores ipsam similique odio!
+                En una nueva fecha, los equipos se mostraron con la misma forma y respetaron el andar del campeonato. Se encontraron con distintas alternativas y pudieron sacar provecho de la superioridad con sus rivales.
                 </p>
+                <a class="body__link" href="">
+                    Seguir Leyendo...
+                </a>
             </div>
         </section>
         <div>
             <hr>
         </div>
         <section class="row">
-            <img class="col margen" src="./img/foto2.jpg" alt="foto2">
+            <img class="col margen escudos" src="./img/foto2.jpg" alt="foto2">
             <div class="col margen">
                 <h1>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum voluptate quidem molestiae ex, exercitationem modi distinctio omnis mollitia, eius veritatis ducimus quam laborum repudiandae hic, adipisci consectetur voluptas dolorem iste  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum amet omnis id sit minima veniam, animi nostrum quam totam voluptate vel ratione perferendis saepe. Error et eum quod eius cum.  
+                    El clasico Rosarino sin diferencias
                 </h1>
                 <p>
-                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos ducimus sapiente, esse odit illo labore excepturi temporibus fuga vero dicta assumenda nam natus pariatur dolore porro quae quibusdam perferendis animi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos iure voluptatum aliquam, expedita maiores ipsum quod magnam earum perspiciatis atque quae sequi. Perspiciatis consequuntur qui recusandae ea provident, animi laboriosam?
+                     El clásico, combatibo y trabado como es de esperarse, nos trajo un partido con el cuchillo entre los dientes, donde la fricción y el orden táctico fue superior a la estética y el buen juego.
+                     Logrando asi no sacarse ventajas
                 </p>    
+                <a class="body__link" href="">
+                    Seguir Leyendo...
+                </a>
             </div>
         </section>
         <div>
             <hr>
         </div>
         <section class="row">
-            <img class="col margen" src="./img/foto3.jpg" alt="foto2">
+            <img class="col margen escudos" src="./img/foto3.jpg" alt="foto2">
             <div class="col margen">
                 <h1>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum voluptate quidem molestiae ex, exercitationem modi distinctio omnis mollitia, eius veritatis ducimus quam laborum repudiandae hic, adipisci consectetur voluptas dolorem iste  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum amet omnis id sit minima veniam, animi nostrum quam totam voluptate vel ratione perferendis saepe. Error et eum quod eius cum.  
+                    Argentinos y Velez, mostraron porque estan en mitad de tabla 
                 </h1>
                 <p>
-                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos ducimus sapiente, esse odit illo labore excepturi temporibus fuga vero dicta assumenda nam natus pariatur dolore porro quae quibusdam perferendis animi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos iure voluptatum aliquam, expedita maiores ipsum quod magnam earum perspiciatis atque quae sequi. Perspiciatis consequuntur qui recusandae ea provident, animi laboriosam?
-                </p>    
+                     En una demostracion de la basta irregularidad de los equipos, no se sacaron ventajas en un aburrido partido en La Paternal
+                </p>  
+                <a class="body__link" href="">
+                    Seguir Leyendo...
+                </a>  
             </div>
         </section>
     </main>       
@@ -79,11 +89,11 @@
                 <hr>
             </div>
             <div class="foot">
-                <h4>
+                <h5>
                     Hecho con amor y mucha dedicación.
-                </h4>
+                </h5>
                 <h4>
-                    NahueCAI92.
+                    NahueCAI92 -_-
                 </h4>
             </div>
         </footer>    
