--- a/nosotros.html
+++ b/nosotros.html
@@ -28,7 +28,7 @@
                     <a class="menu__link" href="posiciones.html">Noticias</a>
                 </li>
                 <li class="menu__item">
-                    <a class="menu__link" href="nosotros.html">Nosotros</a>
+                    <a class="menu__link active" href="nosotros.html">Nosotros</a>
                 </li>
             </ul>
         </nav>
@@ -43,14 +43,18 @@
             </div>    
         </section>
         <section>
+            <h4 class="titulos">
+                Podes dejarnos algún comentario para mejorar aquí:
+                <hr>
+            </h4>
             <form action="/my-handling-form-page" method="post">
                 <ul>
                  <li>
-                   <label for="name">Nombre:</label>
-                   <input type="text" id="name" name="user_name">
+                   <label for="Nombre">Nombre:</label>
+                   <input type="text" id="nombre" name="user_name">
                  </li>
                  <li>
-                   <label for="mail">Correo :</label>
+                   <label for="mail">Correo:</label>
                    <input type="email" id="mail" name="user_mail">
                  </li>
                  <li>
