--- a/equipos.html
+++ b/equipos.html
@@ -19,7 +19,7 @@
                     <a class="menu__link" href="index.html">Inicio</a>
                 </li>
                 <li class="menu__item">
-                    <a class="menu__link" href="equipos.html">Equipos</a>
+                    <a class="menu__link active" href="equipos.html">Equipos</a>
                 </li>
                 <li class="menu__item">   
                     <a class="menu__link" href="fixture.html">Fixture</a>
@@ -36,14 +36,17 @@
     <main class="container">
         <section>
                 <h2 class="titulos">
+                   <b>
                     TODOS LOS EQUIPOS DE LA L.P.F
+                   </b> 
                 </h2>
         </section>
         <section class="row">
-            <div class="col centro">
-                <img class="escudos" src="./img/escudos-seleccionar.png" alt="Link a info por club">
+            <div class="col">
+                <img class="escudos__equipos" src="./img/escudos-seleccionar.png" alt="Link a info por club">
             </div>
-            <ul class="col fondo__negro">
+            <div class="col">
+            <ul class="row fondo__negro">
                 <li class="menu__item ">
                     <a class="menu__link" href="#Aldosivi">Aldosivi</a>
                 </li>
@@ -65,6 +68,10 @@
                 <li class="menu__item">
                     <a class="menu__link" href="#Boca Jrs">Boca Jrs</a>
                 </li>
+            </ul>
+            </div>
+            <div class="col">
+                <ul class="row col fondo__negro">
                 <li class="menu__item">
                     <a class="menu__link" href="#Central Cordoba">Central Cordoba</a>
                 </li>
@@ -86,6 +93,10 @@
                 <li class="menu__item">
                     <a class="menu__link" href="#Huracán">Huracán</a>
                 </li>
+            </ul>
+            </div>
+            <div class="col">
+                <ul class="row fondo__negro">
                 <li class="menu__item">
                     <a class="menu__link" href="#Independiente">Independiente</a>
                 </li>
@@ -96,6 +107,9 @@
                     <a class="menu__link" href="#Newells Old Boys">Newells Old Boys</a>
                 </li>
                 <li class="menu__item">
+                    <a class="menu__link" href="#Patronato">Patronato</a>
+                </li>
+                <li class="menu__item">
                     <a class="menu__link" href="#Platense">Platense</a>
                 </li>
                 <li class="menu__item">
@@ -104,8 +118,15 @@
                 <li class="menu__item">
                     <a class="menu__link" href="#River Plate">River Plate</a>
                 </li>
+                </ul>
+            </div>
+            <div class="col">
+                <ul class="row fondo__negro">
                 <li class="menu__item">
                     <a class="menu__link" href="#Rosario Central">Rosario Central</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#San Lorenzo">San Lorenzo</a>
                 </li>
                 <li class="menu__item">
                     <a class="menu__link" href="#Sarmiento de Junín">Sarmiento de Junín</a>
@@ -122,6 +143,8 @@
                 <li class="menu__item">
                     <a class="menu__link" href="#Velez Sarsfield">Velez Sarsfield</a>
                 </li>
+                </ul>
+            </div>
             </ul>
            
         </section>
