--- a/fixture.html
+++ b/fixture.html
@@ -23,7 +23,7 @@
                     <a class="menu__link" href="equipos.html">Equipos</a>
                 </li>
                 <li class="menu__item">   
-                    <a class="menu__link" href="fixture.html">Fixture</a>
+                    <a class="menu__link active" href="fixture.html">Fixture</a>
                 </li>
                 <li class="menu__item">
                     <a class="menu__link" href="posiciones.html">Noticias</a>
