--- a/nosotros.html
+++ b/nosotros.html
@@ -25,7 +25,7 @@
                     <a class="menu__link" href="fixture.html">Fixture</a>
                 </li>
                 <li class="menu__item">
-                    <a class="menu__link" href="posiciones.html">Noticias</a>
+                    <a class="menu__link" href="noticias.html">Noticias</a>
                 </li>
                 <li class="menu__item">
                     <a class="menu__link active" href="nosotros.html">Nosotros</a>
