--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a class="menu__link" href="fixture.html">Fixture</a>
                 </li>
                 <li class="menu__item">
-                    <a class="menu__link" href="posiciones.html">Noticias</a>
+                    <a class="menu__link" href="noticias.html">Noticias</a>
                 </li>
                 <li class="menu__item">
                     <a class="menu__link" href="nosotros.html">Nosotros</a>
@@ -33,7 +33,9 @@
             </ul>
         </nav>
     </header>
+    <hr>
     <main class="container">
+        
         <section class="row">
             <img class="col margen escudos" src="./img/foto1.jpg" alt="foto1">
             <div class="col margen">  
