--- a/fixture.html
+++ b/fixture.html
@@ -26,7 +26,7 @@
                     <a class="menu__link active" href="fixture.html">Fixture</a>
                 </li>
                 <li class="menu__item">
-                    <a class="menu__link" href="noticias.html">Noticias</a>
+                    <a class="menu__link" href="reglas.html">Reglas</a>
                 </li>
                 <li class="menu__item">
                     <a class="menu__link" href="nosotros.html">Nosotros</a>
