--- a/equipos.html
+++ b/equipos.html
@@ -33,14 +33,15 @@
             </ul>
         </nav>
     </header>
+    <hr>
     <main class="container">
         <section>
-            <hr>
-                <h2 class="titulos">
+            
+                <h1 class="titulos">
                    <b>
-                    TODOS LOS EQUIPOS DE LA L.P.F
+                    Todos los equipos de la L.P.F
                    </b> 
-                </h2>
+                </h1>
             <hr>
         </section>
         <section class="row">
@@ -161,11 +162,11 @@
             <hr>
         </div>
         <div class="foot">
-            <h4>
+            <h5>
                 Hecho con amor y mucha dedicación.
-            </h4>
+            </h5>
             <h4>
-                NahueCAI92.
+                NahueCAI92 -_-
             </h4>
         </div>
     </footer>
