--- a/fixture.html
+++ b/fixture.html
@@ -34,10 +34,13 @@
             </ul>
         </nav>
     </header>
+    <hr>
     <main class="container">
         <div>
             <h1 class="titulos">
-                Fechas del campeonato:
+               <b>
+                    Fechas del campeonato:
+               </b> 
             </h1>
             <hr>
         </div>
@@ -71,23 +74,15 @@
               <span class="visually-hidden">Siguiente</span>
             </button>
         </section>
-        <!-- <section class="row">    
-            <h2 class="titulos col">
-            Fixture de la fecha N° 8:
-            </h2>
-            <div>
-                <img class="escudos, centro" src="./img/Fixture fecha 8.png" alt="fecha 8"> 
-            </div>
-        </section>
-
-    </main> -->
+    </main>
+    <hr>
     <footer>
         <div class="foot">
-            <h4>
+            <h5>
                 Hecho con amor y mucha dedicación.
-            </h4>
+            </h5>
             <h4>
-                NahueCAI92.
+                NahueCAI92 -_-
             </h4>
         </div>
     </footer>
