--- a/index.html
+++ b/index.html
@@ -35,7 +35,14 @@
     </header>
     <hr>
     <main class="container">
-        
+        <div>
+            <h1 class="titulos">
+               <b>
+                    Resumen de la Fecha:
+               </b> 
+            </h1>
+            <hr>
+        </div>        
         <section class="row">
             <img class="col margen escudos" src="./img/foto1.jpg" alt="foto1">
             <div class="col margen">  
