--- a/nosotros.html
+++ b/nosotros.html
@@ -95,8 +95,7 @@
                             
                         </form>
             </div>	
-        </div>
-    
+        </div>    
     </main>
 
     <footer>
@@ -108,7 +107,7 @@
                 Hecho con amor y mucha dedicación.
             </h5>
             <h4>
-                NahueCAI92 -_-
+                NahueCAI92.-
             </h4>
         </div>
     </footer>
