--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     Hecho con amor y mucha dedicación.
                 </h5>
                 <h4>
-                    NahueCAI92 -_-
+                    NahueCAI92.-
                 </h4>
             </div>
         </footer>    
