--- a/fixture.html
+++ b/fixture.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name="keywords" content="FUTBOL, FÚTBOL, ARGENTINA, LIGA DE FUTBOL, COPA DE LA LIGA, PELOTA, SOCCER, FECHA, INFORMACION DE FUTBOL, FICHAJE, CLASIFICACION, CLASIFICACIÓN">
+    <meta name="descrption" content="Informacion de la liga argentina de futbol">
     <title>Fixture</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
