--- a/reglas.html
+++ b/reglas.html
@@ -71,7 +71,7 @@
                             - Del septimo clasificado al decimo clasifican a Copa Sudamericana, y el equipo que termine en el puesto número 11 jugará un partido previo para clasificarse a los grupos de la dicha competición.
                        </li>
                        <li>
-                            - El resto quedarán a la expectativa de no quedar en zona de descenso.
+                            - El resto quedarán a la expectativa de no quedar en zona de descenso y realizar una mejor campaña el año siguiente.
                        </li>
                        <li>
                             - Todos los equipos podrán hacer totalitarias sus compras/ventas en las ventanas de períodos de fichajes acordados al inicio del torneo, donde no incluye las clausulas por jugadores libres, jugadores que han jugado en mas de dos equipos en un año, etc.
