--- a/equipos.html
+++ b/equipos.html
@@ -45,11 +45,12 @@
                 </h1>
             <hr>
         </section>
-        <section class="row">
-            <div class="col">
-                <img class="escudos__equipos" src="./img/escudos-seleccionar.png" alt="Link a info por club">
+        <section class="col">
+            <div class="row">
+                <img class="titulos" src="./img/escudos-seleccionar.png" alt="Link a info por club">
             </div>
-            <div class="col">
+            <hr>
+            <div class="row">
             <div>
                 <ul class="col fondo__negro">
                     <li class="menu__item ">
@@ -73,10 +74,6 @@
                     <li class="menu__item">
                         <a class="menu__link" href="#Boca Jrs">Boca Jrs</a>
                     </li>
-                </ul>
-            </div>
-            <div>
-                <ul class="col fondo__negro">
                     <li class="menu__item">
                         <a class="menu__link" href="#Central Cordoba">Central Cordoba</a>
                     </li>
@@ -97,11 +94,7 @@
                     </li>
                     <li class="menu__item">
                         <a class="menu__link" href="#Huracán">Huracán</a>
-                    </li>
-                </ul>
-            </div>
-            <div>
-                <ul class="col fondo__negro">
+                    </li>           
                     <li class="menu__item">
                         <a class="menu__link" href="#Independiente">Independiente</a>
                     </li>
@@ -122,11 +115,7 @@
                     </li>
                     <li class="menu__item">
                         <a class="menu__link" href="#River Plate">River Plate</a>
-                    </li>
-                </ul>
-            </div>
-            <div>
-                <ul class="col fondo__negro">
+                    </li>            
                     <li class="menu__item">
                         <a class="menu__link" href="#Rosario Central">Rosario Central</a>
                     </li>
@@ -149,10 +138,7 @@
                         <a class="menu__link" href="#Velez Sarsfield">Velez Sarsfield</a>
                     </li>
                 </ul>
-            </div>
-            </div>
-    
-           
+            </div>          
         </section>
             <caption>
                 <p>Selecciona un equipo para mas información de tu equipo.</p>
