--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
             <hr>
         </div>        
         <section class="row">
-            <img class="col margen escudos" src="./img/foto1.jpg" alt="foto1">
-            <div class="col margen">  
+            <img class="col-6" src="./img/foto1.jpg" alt="foto1">
+            <div class="col-6">  
                 <h1>
-                Resumen de la fecha número 22 del campeonato argentino
+                    <b>Resumen de la fecha número 22 del campeonato argentino</b>
                 </h1>
                 <p>
                 En una nueva fecha, los equipos se mostraron con la misma forma y respetaron el andar del campeonato. Se encontraron con distintas alternativas y pudieron sacar provecho de la superioridad con sus rivales.
@@ -63,10 +63,10 @@
             <hr>
         </div>
         <section class="row">
-            <img class="col margen escudos" src="./img/foto2.jpg" alt="foto2">
-            <div class="col margen">
+            <img class="col-6" src="./img/foto2.jpg" alt="foto2">
+            <div class="col-6">
                 <h1>
-                    El clasico Rosarino sin diferencias
+                    <b>El clasico Rosarino sin diferencias</b>
                 </h1>
                 <p>
                      El clásico, combatibo y trabado como es de esperarse, nos trajo un partido con el cuchillo entre los dientes, donde la fricción y el orden táctico fue superior a la estética y el buen juego.
@@ -81,10 +81,10 @@
             <hr>
         </div>
         <section class="row">
-            <img class="col margen escudos" src="./img/foto3.jpg" alt="foto2">
-            <div class="col margen">
+            <img class="col-6" src="./img/foto3.jpg" alt="foto2">
+            <div class="col-6">
                 <h1>
-                    Argentinos y Velez, mostraron porque estan en mitad de tabla 
+                    <b>Argentinos y Velez, mostraron porque estan en mitad de tabla</b> 
                 </h1>
                 <p>
                      En una demostracion de la basta irregularidad de los equipos, no se sacaron ventajas en un aburrido partido en La Paternal
