--- a/reglas.html
+++ b/reglas.html
@@ -42,7 +42,7 @@
         </h1>
         <hr>
         <section class="centro">
-            <img src="./img/logo.png" alt="posiciones">
+            <img src="./img/banner afa.png" alt="posiciones">
         </section>
         <section>
             <hr>
