--- a/nosotros.html
+++ b/nosotros.html
@@ -45,13 +45,15 @@
                 </h2>
             </div>   
         </section>
-        <section class="titulos">
-            <h4>Nos interesa informarte, y queremos que estes informado con las ultimas noticias.</h4>
-        </section>
         <hr>
+        <article class="titulos">
+            <h4>Nos interesa informarte con las ultimas noticias.</h4>
+        </article>
+        <hr>
+        <section class="container" >
         <div class="contact_form">
             <div class="formulario">			
-          <h1>Formulario de contacto</h1>
+          <h1><b>Formulario de contacto</b></h1>
                     <h3>Escríbenos y en breve los pondremos en contacto contigo</h3>    
                         <form action="submeter-formulario.php" method="post">	  
                             
@@ -97,7 +99,8 @@
                             
                         </form>
             </div>	
-        </div>    
+        </div>
+    </section>    
     </main>
 
     <footer>
